# games_pressizola

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README  TODO  config.h  config.status  configure  configure.in  cust-configure.sh  dossizola.kdevprj
dossizola/: Makefile  Makefile.am  Makefile.in  dossizola  fct.c  ia.c  isola.h  jeu.c  main.c  menu.c  resize.c  resize.h  wosisplash.h
dossizola/images/: Makefile  Makefile.am  Makefile.in
