####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = dossizola
dossizola_SOURCES = menu.c jeu.c ia.c fct.c main.c 
dossizola_LDADD   = -lpthread -lSDL -lSDL_image

SUBDIRS = images 

EXTRA_DIST = main.c isola.h fct.c ia.c jeu.c menu.c 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = dossizola
