####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = case.png dossa-ange.png dossa-attend-feu.png dossa-attend.png dossa-cours.png dossa-lance.png dossa-victoire.png dossi-ange.png dossi-attend-feu.png dossi-attend.png dossi-cours.png dossi-lance.png dossi-nivo.png dossi-victoire.png feu.png fond1.jpg fond2.jpg fond3.jpg fond4.jpg fond5.jpg menu.jpg police-jaune.png police-rouge.png police-verte.png 

install-data-local:
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) case.png $(prefix)/dossizola/images/case.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-ange.png $(prefix)/dossizola/images/dossa-ange.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-attend-feu.png $(prefix)/dossizola/images/dossa-attend-feu.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-attend.png $(prefix)/dossizola/images/dossa-attend.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-cours.png $(prefix)/dossizola/images/dossa-cours.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-lance.png $(prefix)/dossizola/images/dossa-lance.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossa-victoire.png $(prefix)/dossizola/images/dossa-victoire.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-ange.png $(prefix)/dossizola/images/dossi-ange.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-attend-feu.png $(prefix)/dossizola/images/dossi-attend-feu.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-attend.png $(prefix)/dossizola/images/dossi-attend.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-cours.png $(prefix)/dossizola/images/dossi-cours.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-lance.png $(prefix)/dossizola/images/dossi-lance.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-nivo.png $(prefix)/dossizola/images/dossi-nivo.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) dossi-victoire.png $(prefix)/dossizola/images/dossi-victoire.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) feu.png $(prefix)/dossizola/images/feu.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) fond1.jpg $(prefix)/dossizola/images/fond1.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) fond2.jpg $(prefix)/dossizola/images/fond2.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) fond3.jpg $(prefix)/dossizola/images/fond3.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) fond4.jpg $(prefix)/dossizola/images/fond4.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) fond5.jpg $(prefix)/dossizola/images/fond5.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) menu.jpg $(prefix)/dossizola/images/menu.jpg
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) police-jaune.png $(prefix)/dossizola/images/police-jaune.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) police-rouge.png $(prefix)/dossizola/images/police-rouge.png
	$(mkinstalldirs) $(prefix)/dossizola/images/
	$(INSTALL_DATA) police-verte.png $(prefix)/dossizola/images/police-verte.png

uninstall-local:
	-rm -f $(prefix)/dossizola/images/case.png
	-rm -f $(prefix)/dossizola/images/dossa-ange.png
	-rm -f $(prefix)/dossizola/images/dossa-attend-feu.png
	-rm -f $(prefix)/dossizola/images/dossa-attend.png
	-rm -f $(prefix)/dossizola/images/dossa-cours.png
	-rm -f $(prefix)/dossizola/images/dossa-lance.png
	-rm -f $(prefix)/dossizola/images/dossa-victoire.png
	-rm -f $(prefix)/dossizola/images/dossi-ange.png
	-rm -f $(prefix)/dossizola/images/dossi-attend-feu.png
	-rm -f $(prefix)/dossizola/images/dossi-attend.png
	-rm -f $(prefix)/dossizola/images/dossi-cours.png
	-rm -f $(prefix)/dossizola/images/dossi-lance.png
	-rm -f $(prefix)/dossizola/images/dossi-nivo.png
	-rm -f $(prefix)/dossizola/images/dossi-victoire.png
	-rm -f $(prefix)/dossizola/images/feu.png
	-rm -f $(prefix)/dossizola/images/fond1.jpg
	-rm -f $(prefix)/dossizola/images/fond2.jpg
	-rm -f $(prefix)/dossizola/images/fond3.jpg
	-rm -f $(prefix)/dossizola/images/fond4.jpg
	-rm -f $(prefix)/dossizola/images/fond5.jpg
	-rm -f $(prefix)/dossizola/images/menu.jpg
	-rm -f $(prefix)/dossizola/images/police-jaune.png
	-rm -f $(prefix)/dossizola/images/police-rouge.png
	-rm -f $(prefix)/dossizola/images/police-verte.png

####### kdevelop will overwrite this part!!! (end)############
